--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -23,9 +23,9 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html">Home</a></li>
+								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Dropdown</a>
+									<a href="about-us.html">Sobre Nosotros</a>
 									<ul>
 										<li><a href="#">Lorem dolor</a></li>
 										<li><a href="#">Magna phasellus</a></li>
@@ -44,9 +44,9 @@
 									</ul>
 								</li>
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li class="current"><a href="right-sidebar.html">Right Sidebar</a></li>
+								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="two-sidebar.html">Two Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="contactenos">Contáctenos</a></li>
 							</ul>
 						</nav>
 
