Se modifico contactenos y index

--- a/contactenos.html
+++ b/contactenos.html
@@ -26,27 +26,12 @@
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
 									<a href="about-us.html">Sobre Nosotros</a>
-									<ul>
-										<li><a href="#">Lorem dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam sed tempus</a></li>
-										<li>
-											<a href="#">Submenu</a>
-											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Phasellus magna</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
-									</ul>
+									
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="two-sidebar.html">Two Sidebar</a></li>
-								<li><a href="contactenos">Contáctenos</a></li>
+								<li><a href="left-sidebar.html">Servicios</a></li>
+								<li><a href="right-sidebar.html">Galeria</a></li>
+								<li><a href="two-sidebar.html">Contactenos</a></li>
+								
 							</ul>
 						</nav>
 
